--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "socket.io-client": "2.3.0",
+    "socket.io-client": "^4.5.1",
     "xterm": "4.2.0"
   },
   "devDependencies": {
